# kornia_rs

examples/copper_pipeline/: Cargo.toml  kornia_app.ron
examples/copper_pipeline/src/: main.rs
examples/copper_pipeline/src/tasks/: cu_image.rs  mod.rs  rerun_viz.rs  sobel.rs  webcam.rs
