[package]
name = "copper_pipeline"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu29-helpers = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
kornia = { workspace = true, features = ["gstreamer"] }
rerun = { workspace = true }
tempfile = "3.14"
